@@ -349,6 +349,8 @@ User Admin: fixed i18n gettext issue in rollover
 i18n: fixed non-translatable string in Markbook
 	Edited file /modules/Markbook/markbook_edit_addMulti.php
 
+Markbook: fixed incorrect default class (when none specified) in Markbook edit
+	Edited file /modules/Markbook/markbook_edit.php
 v9.1.00
 -------
 Installer: removed orphaned debug output
